deployments/overlays/us/patch-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcq-app-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32001
