deployments/overlays/us/patch-ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcq-app-ingress
spec:
  rules:
    - host: mcq-app.local
      http:
        paths:
          - path: /prod-us
            pathType: Prefix
            backend:
              service:
                name: mcq-app-service
                port:
                  number: 80
